css/custom-styles.css
/*I'm gonna add custom stuff in here. It's gonna melt your eyeballs*/



/* Typography
========================= */

/*h1, .indexH1 {
	font-size: 16px;
}
*/
.logo-text {
	text-decoration: none;
	font-family: helvetica, arial;
	font-size: 1em;
	font-weight: bold;
}

.navbar-text {
	font-size: 16px;
}

/* Logos, etc.
========================= */
.main-logo {

}

/* SVG Map
========================= */

#north_america:hover, 
#south_america:hover, 
#africa:hover, 
#asia:hover, 
#australia:hover, 
#europe:hover {
	fill: #FFFDE7;
}

#north_america:active, 
#south_america:active, 
#africa:active, 
#asia:active, 
#australia:active, 
#europe:active {
	fill: #C5E1A5;
}

/* Jumbotron
========================= */
.jumbotron {
	padding-top: 100px;
}

/* Layout
========================= */

.navbar {

}

.regionColumns {
	padding-bottom: 5px;
}

.regionRow {
	padding-bottom: 40px;
}

@media (max-width: 767px) {
	.mainMapSVG	{
		padding-top: 30px;
	}
	.navbar {
		max-height: 60px;
		min-height: 30px;		
	}
	.navbar-text {
	font-size: 16px;
	margin-top: 20px;
	margin-bottom: 20px;
}

}
@media (min-width: 768px) and (max-width: 991px) {
	.mainMapSVG	{
		padding-top: 40px;
	}
}
@media (min-width: 992px) and (max-width: 1199) {
	.mainMapSVG	{
		padding-top: 40px;
	}
}
@media (min-width: 1200px) {
	.mainMapSVG	{
		padding-top: 40px;
	}
}

